--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "kmooc",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.18.2"
+  },
   "devDependencies": {
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
@@ -12,6 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=development"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "abh <dksqhrghks12@peoplelife.co.kr>",
+  "license": "ISC",
+  "repository": "https://github.com/ABHwan/kmooc-abh.git"
 }
