--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack-cli": "^5.0.0"
   },
   "scripts": {
+    "serve": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=development"
   },
