--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "kmooc",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
+    "html-loader": "^4.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
